// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render heading correctly 1`] = `
.c0 {
  font-weight: 400;
  font-size: 2.8rem;
  line-height: 3.3rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;

exports[`<Heading /> should render heading correctly bold value [300] 1`] = `
.c0 {
  font-weight: 300;
  font-size: 2.8rem;
  line-height: 3.3rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;

exports[`<Heading /> should render heading correctly bold value [400] 1`] = `
.c0 {
  font-weight: 400;
  font-size: 2.8rem;
  line-height: 3.3rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;

exports[`<Heading /> should render heading correctly bold value [500] 1`] = `
.c0 {
  font-weight: 500;
  font-size: 2.8rem;
  line-height: 3.3rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;

exports[`<Heading /> should render heading correctly font size and line height value [large] 1`] = `
.c0 {
  font-weight: 500;
  font-size: 4rem;
  line-height: 3.6rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;

exports[`<Heading /> should render heading correctly font size and line height value [small] 1`] = `
.c0 {
  font-weight: 500;
  font-size: 2.8rem;
  line-height: 3.3rem;
}

<h1
  class="c0"
>
  heading
</h1>
`;
